--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         </p>
     </div>
     <div class="grid grid-cols-2 ">
-  <div class="relative ">
-    <img src="assets/pic1.jpg" class="w-full h-[30rem] object-top" alt="Image 1">
+  <div class="relative border-b-8 border-[#222222] ">
+    <img src="assets/pic1.jpg" class="w-full h-[30rem] object-top border-r-4 border-[#222222]" alt="Image 1">
     <div class="absolute top-2 left-0 w-full flex items-center justify-center">
       <h1 class="text-white font-bold text-4xl">RAZER ORNATA V3 TENKEYLESS</h1>
     </div>
@@ -95,51 +95,87 @@
         <p class="text-white font-bold text-2xl">SLIM.CLICKY.ERGONOMIC</p>
       </div>
       <div class="absolute top-20 left-0 w-full flex items-center justify-center">
-        <p class="text-white font-bold text-0xl"><span class="hover:underline">Learn More</span><span
+        <p class="text-white font-bold text-1xl"><span class="hover:underline">Learn More</span><span
             class="text-[#3fc728]">></span><span class="hover:underline ml-6">Buy</span><span
             class="text-[#3fc728]">></span></p>
       </div>
   </div>
-  <div class="relative">
-    <img src="assets/imageno.4.jpg" class="w-full h-[30rem] object-top" alt="Image 2">
-    <div class="absolute top-0 left-0 w-full flex items-center justify-center">
-      <h1 class="text-white font-bold text-lg">NEW RAZER BLADE 18</h1>
+  <div class="relative border-b-8 border-[#222222]">
+    <img src="assets/imageno.4.jpg" class="w-full h-[30rem] object-top border-l-4 border-[#222222]" alt="Image 2 ">
+    <div class="absolute top-2 left-0 w-full flex items-center justify-center">
+      <h1 class="text-white font-bold text-4xl text-center">UNLEASH A NEW AGE OF TECHNOLOGY</h1>
     </div>
+    <div class="absolute top-[5rem] left-0 w-full flex items-center justify-center">
+        <h1 class="text-white font-bold text-2xl">EXPERIENCE THE REVOLUTION</h1>
+      </div>
+      <div class="absolute top-[8rem] left-0 w-full flex items-center justify-center">
+        <h1 class="text-white font-bold text-1xl"><span class="hover:underline ml-6">Shop Now</span><span
+            class="text-[#3fc728]">></span></p></h1>
+      </div>
   </div>
 </div>
 
-
-
-    <div class="flex">
-        <div class="object-fill h-screen border-b-8 border-[#222222] text-center"
-            style="background-image: url('assets/imagen0.3.jpg');">
-            <h1 class="text-white text-6xl font-medium top-[60rem] ">NEW RAZER BLADE 18</h1>
-            <span class="text-white text-4xl  right-[25rem] font-medium">THE ULTIMATE DESKTOP REPLACEMENT</span>
-            <p class="text-white text-2xl right-[37rem]"><span class="hover:underline">Learn More</span><span
-                    class="text-[#3fc728]">></span><span class="hover:underline">Buy</span><span
-                    class="text-[#3fc728]">></span>
-            </p>
+<div class="grid grid-cols-2 ">
+    <div class="relative border-b-8 border-[#222222] ">
+      <img src="assets/imageno.5.jpg" class="w-full h-[30rem] object-top border-r-4 border-[#222222]" alt="Image 1">
+      <div class="absolute top-2 left-0 w-full flex items-center justify-center">
+        <h1 class="text-black font-bold text-4xl">RAZER ENKI PRO</h1>
+      </div>
+      <div class="absolute top-12 left-0 w-full flex items-center justify-center">
+          <p class="text-black font-bold text-2xl">AUTOMOBILI LAMBORGHINI EDITION</p>
         </div>
-        <div class="w-a h-screen  border-b-8 border-[#222222] text-center"
-            style="background-image: url('assets/imageno.4.jpg');">
-            <h1 class="text-white text-6xl font-medium top-[60rem] ">NEW RAZER BLADE 18</h1>
-            <span class="text-white text-4xl  right-[25rem] font-medium">THE ULTIMATE DESKTOP REPLACEMENT</span>
-            <p class="text-white text-2xl right-[37rem]"><span class="hover:underline">Learn More</span><span
-                    class="text-[#3fc728]">></span><span class="hover:underline">Buy</span><span
-                    class="text-[#3fc728]">></span>
-            </p>
+        <div class="absolute top-20 left-0 w-full flex items-center justify-center">
+          <p class="text-black font-bold text-1xl"><span class="hover:underline">Learn More</span><span
+              class="text-[#3fc728]">></span><span class="hover:underline ml-8">Buy</span><span
+              class="text-[#3fc728]">></span></p>
         </div>
     </div>
-    <div class="flex">
-        <img src="assets/imageno.5.jpg" alt="" class=" w-[50%] h-[70vh] border-b-8 border-r-4 border-[#222222]">
-        <img src="assets/imageno.6.jpg" alt="" class=" w-[50%] h-[70vh] border-b-8 border-l-4 border-[#222222]">
+    <div class="relative border-b-8 border-[#222222]">
+      <img src="assets/imageno.6.jpg" class="w-full h-[30rem] object-top border-l-4 border-[#222222]" alt="Image 2 ">
+      <div class="absolute top-2 left-0 w-full flex items-center justify-center">
+        <h1 class="text-white font-bold text-4xl text-center">NEW RAZER BLADE 15</h1>
+      </div>
+      <div class="absolute top-12 left-0 w-full flex items-center justify-center">
+          <h1 class="text-white font-bold text-2xl">PORTABLE.POWERFUL.PERFECTION</h1>
+        </div>
+        <div class="absolute top-20 left-0 w-full flex items-center justify-center">
+          <h1 class="text-white font-bold text-1xl"><span class="hover:underline">Learn More</span><span
+            class="text-[#3fc728]">></span><span class="hover:underline ml-8">Buy</span><span
+            class="text-[#3fc728]">></span></h1>
+        </div>
     </div>
+  </div>
 
-    <div class="flex">
-        <img src="assets/imageno.7.jpg" alt="" class=" w-[50%] h-[70vh] border-b-8 border-r-4 border-[#222222]">
-        <img src="assets/imageno.8.jpg" alt="" class=" w-[50%] h-[70vh] border-b-8 border-l-4 border-[#222222]">
+  <div class="grid grid-cols-2 ">
+    <div class="relative border-b-8 border-[#222222] ">
+      <img src="assets/imageno.7.jpg" class="w-full h-[30rem] object-top border-r-4 border-[#222222]" alt="Image 1">
+      <div class="absolute top-2 left-0 w-full flex items-center justify-center">
+        <h1 class="text-white font-bold text-4xl">RAZER EDGE</h1>
+      </div>
+      <div class="absolute top-12 left-0 w-full flex items-center justify-center">
+          <p class="text-white font-bold text-2xl">THE ULTIMATE ANDROID GAMING HANDHELD</p>
+        </div>
+        <div class="absolute top-20 left-0 w-full flex items-center justify-center">
+          <p class="text-white font-bold text-1xl"><span class="hover:underline">Learn More</span><span
+              class="text-[#3fc728]">></span><span class="hover:underline ml-6">Buy</span><span
+              class="text-[#3fc728]">></span></p>
+        </div>
     </div>
-
+    <div class="relative border-b-8 border-[#222222]">
+      <img src="assets/imageno.2.jpg" class="w-full h-[30rem] object-top border-l-4 border-[#222222]" alt="Image 2 ">
+      <div class="absolute top-2 left-0 w-full flex items-center justify-center">
+        <h1 class="text-white font-bold text-4xl text-center">RAZER STREAM CONTROLLER X</h1>
+      </div>
+      <div class="absolute top-12 left-0 w-full flex items-center justify-center">
+          <h1 class="text-white font-bold text-2xl">INSTANT CONTROL INFINITE CREATIVITY</h1>
+        </div>
+        <div class="absolute top-20 left-0 w-full flex items-center justify-center">
+          <h1 class="text-white font-bold text-1xl"><span class="hover:underline">Learn More</span><span
+            class="text-[#3fc728]">></span><span class="hover:underline ml-6">Buy</span><span
+            class="text-[#3fc728]">></span></h1>
+        </div>
+    </div>
+  </div>
 
     <footer class="bg-black ">
         <div class="mx-auto w-full max-w-screen-xl">
@@ -241,6 +277,14 @@
                             <a href="#" class="hover:underline hover:text-white">Contact us</a>
                         </li>
                     </ul>
+                </div>
+                <div>
+                    <li>
+                        <p>FOUR GAMERS BY GAMERS</p>
+                        <button class="bg-red-500 p-2 font-semibold text-white inline-flex items-center space-x-2 rounded">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="w-5" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C5.372 0 0 5.373 0 12s5.372 12 12 12c6.627 0 12-5.373 12-12S18.627 0 12 0zm.14 19.018c-3.868 0-7-3.14-7-7.018c0-3.878 3.132-7.018 7-7.018c1.89 0 3.47.697 4.682 1.829l-1.974 1.978v-.004c-.735-.702-1.667-1.062-2.708-1.062c-2.31 0-4.187 1.956-4.187 4.273c0 2.315 1.877 4.277 4.187 4.277c2.096 0 3.522-1.202 3.816-2.852H12.14v-2.737h6.585c.088.47.135.96.135 1.474c0 4.01-2.677 6.86-6.72 6.86z" fill="currentColor"/></g></svg>
+        </button>
+                    </li>
                 </div>
             </div>
 
